# quarry

./: .gitignore  README.md  dump-db  quarry.cabal
Storage/: HashFS.hs
Storage/HashFS/: Types.hs
Tools/: Quarry.hs
Tools/Quarry/: DB.hs  DBHelper.hs  Monad.hs  Types.hs
Tools/Quarry/DB/: Meta.hs  Utils.hs
src/: Quarry.hs
